@@ -1,5 +1,10 @@
 2013-03-26  Jeremy Bennett <jeremy.bennett@embecosm.com>
 
+	* build-elf32.sh, build-uclibc.sh: Use release specific build
+	directory names.
+
+2013-03-26  Jeremy Bennett <jeremy.bennett@embecosm.com>
+
 	* run-elf32-tests.sh: Replace bd_elf_gdb with bd_elf throughout.
 
 2013-03-25  Jeremy Bennett <jeremy.bennett@embecosm.com>
